Made ui for login page also added newcomponents

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+    </style>
+        
     <title>Hotel? trivago</title>
   </head>
   <body>
