--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     </style>
         
     <title>Hotel? trivago</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
