--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,14 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
     </style>
-        
+        <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous"
+      />
+      <link rel="stylesheet" href="../src/App.css">
+
     <title>Hotel? trivago</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
